# mnist-digit-recognition

./: .gitignore  LICENSE  README.md  presentation.html  presentation.md  pyproject.toml
configs/: config_example.toml
examples/: multi_resolution_example.py
scripts/: demo.py  detect_hardware.py  evaluate.py  inference.py  train.py
src/: __init__.py
src/models/: __init__.py  cnn.py
src/utils/: __init__.py  config_loader.py  data_loader.py  inference.py  trainer.py  visualize.py
